--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 /node_modules
-/.idea
 /.pnp
+/.idea
 .pnp.js
 
 # testing
@@ -22,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
